made html biolerplate, css, and javascript folders

--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-test global setting
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <meta name="description" content="Alex West Web Portfolio">
+	<meta name="keywords" content="GIS, erdas, arcgis pro, austin, map, mapping, thematic, statistical, atlas, website porfolio,">
+  	<meta name="author" content="Alexander West">
+    <title>A. West | Portfolio & Atlas Showcase</title>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <header>
+      
+    </header>
+    <script src="app.js"></script>
+    <footer>
+      <p>abwmaps, Copyright &copy; 2022</p>
+    </footer>
+  </body>
+</html>
