--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <!--<meta name="viewport" content="width=device-width">-->
     <meta name="description" content="Alex West Web Portfolio">
 	  <meta name="keywords" content="GIS, erdas, arcgis pro, austin, map, mapping, thematic, statistical, atlas, website porfolio,">
   	<meta name="author" content="Alexander West">
     <title>A. West | Portfolio & Atlas Showcase</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,300;0,600;0,700;0,800;1,400&display=swap" rel="stylesheet">
   </head>
   <body>
+
     <section class="hero">
+
       <nav>
         <div>LOGO</div>
         <ul>
@@ -19,8 +22,18 @@
           <li>Contact me</li>
         </ul>
       </nav>
+      <div class="heroArea">
+        <div class="heroText">
+          <h1>Alexander B West</h1>
+          <p>GIS Analyst</p>  
+          <div class="button"> About me </div>
+        </div>
+      </div>
+
     </section>
+
     <section></section>
+
     <section></section>
     <footer>
       <p>abwmaps, Copyright &copy; 2022</p>
