added flex to mugshot container

--- a/index.html
+++ b/index.html
@@ -39,8 +39,16 @@
         </div>
       </div>
     </section>
-    <section></section>
-    <section></section>
+    <section class="subSection">
+      <div class="info">
+        <h2>About Me</h2>
+        <p>Hello My Name is Alex West. I am an aspiring GIS developer and Burgening GIS analyst. I have  </p>
+      </div>
+      <div class="mugShotContainer">
+        <img class="mugShot" src="src/img/mugshot.jpg" alt="Alex West mugshot"/>
+      </div>
+    </section>
+    <section class="subSection"></section>
     <footer>
       <p>abwmaps, Copyright &copy; 2022</p>
     </footer>
