added atlas section played with styles

--- a/index.html
+++ b/index.html
@@ -48,7 +48,15 @@
         <img class="mugShot" src="src/img/mugshot.jpg" alt="Alex West mugshot"/>
       </div>
     </section>
-    <section class="subSection"></section>
+    <section class="subSectionAlt">
+      <h2>Atlas Showcase</h2>
+      <div class="mapsContainer">
+        <div class="map-example"></div>
+        <div class="map-example"></div>
+        <div class="map-example"></div>
+        <div class="map-example"></div>
+      </div>  
+    </section>
     <footer>
       <p>abwmaps, Copyright &copy; 2022</p>
     </footer>
