linked my principle component analysis, styled

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section class="subSection">
       <div class="info">
         <h2>About Me</h2>
-        <p>Hello My Name is Alex West. I am an aspiring GIS developer and Burgening GIS analyst. I have  </p>
+        <p>Hello My Name is Alex West. I am an aspiring GIS developer and Burgening GIS analyst. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic ea quas accusantium explicabo quia praesentium aspernatur! Aut placeat corporis veniam enim facilis nisi porro, quo molestias explicabo. Explicabo, magni minus!  </p>
       </div>
       <div class="mugShotContainer">
         <img class="mugShot" src="src/img/mugshot.jpg" alt="Alex West mugshot"/>
@@ -51,10 +51,34 @@
     <section class="subSectionAlt">
       <h2>Atlas Showcase</h2>
       <div class="mapsContainer">
-        <div class="map-example"></div>
-        <div class="map-example"></div>
-        <div class="map-example"></div>
-        <div class="map-example"></div>
+        <div class="map-example">
+          <img class="project-image" src="" alt="Project Class One"/>
+          <h3>Web Map (ArcGIS Pro, GEOJSON)</h3>
+          <p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi explicabo corrupti voluptas ratione necessitatibus! Aspernatur sapiente non ab adipisci placeat commodi maxime quidem at quibusdam. Maxime adipisci mollitia totam aliquam.</p>
+          <hr/>
+          <p class="subtext">View Here</p>
+        </div>
+        <div class="map-example">
+          <img class="project-image" src="" alt="Project Class Two"/>
+          <h3>Thematic Map (ArcGIS Pro)</h3>
+          <p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, soluta sit! Alias fugiat voluptatem cupiditate quia, modi possimus quaerat optio iusto ipsum. Reiciendis, iure enim? Eum laudantium ratione odit repellendus.</p>
+          <hr/>
+          <p class="subtext">View Here</p>
+        </div>
+        <div class="map-example">
+          <img class="project-image" src="src/img/ERDAS.png" alt="Project Class Three"/>
+          <h3>Landuse Landcover Change Map (ERDAS Imagine)</h3>
+          <p class="subtext">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error soluta nesciunt, aspernatur sit nostrum accusamus enim ut eligendi? Architecto, illo animi. Maiores quos facilis hic assumenda commodi ea optio dolores!</p>
+          <hr/>
+          <p class="subtext"><a class="example-link" href="https://storymaps.arcgis.com/stories/cc8220d1b9ac4018800f720573c43658?play=true&speed=medium">View Here</a></p>
+        </div>
+        <div class="map-example">
+          <img class="project-image" src="" alt="Project Class Four"/>
+          <h3>Pictoral Map (ArcGIS Pro)</h3>
+          <p class="subtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit distinctio esse maiores illo? Enim saepe earum doloribus inventore quia, quasi ea placeat nulla deleniti officia iusto velit illo, ducimus dolores!</p>
+          <hr/>
+          <p class="subtext">View Here</p>
+        </div>
       </div>  
     </section>
     <footer>
