--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <nav>
         <img class="logo" src="src/img/abwmapsLogo.png" alt="abwmaps logo"/>
         <ul>
-          <li>About me</li>
-          <li>Projects</li>
-          <li>Contact me</li>
+          <li><a href="">Downloads</a></li>
+          <li><a href="#Projects">Projects</a></li>
+          <li><a href="#ContactMe">Contact</a></li>
         </ul>
       </nav>
       <div class="heroArea">
@@ -39,7 +39,7 @@
         </div>
       </div>
     </section>
-    <section class="subSection">
+    <section class="subSection" id="aboutMe">
       <div class="info">
         <h2>About Me</h2>
         <p>Hello My Name is Alex West. I am an aspiring GIS developer and Burgening GIS analyst. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic ea quas accusantium explicabo quia praesentium aspernatur! Aut placeat corporis veniam enim facilis nisi porro, quo molestias explicabo. Explicabo, magni minus!  </p>
@@ -48,7 +48,7 @@
         <img class="mugShot" src="src/img/mugshot.jpg" alt="Alex West mugshot"/>
       </div>
     </section>
-    <section class="subSectionAlt">
+    <section class="subSectionAlt" id="Projects">
       <h2>Atlas Showcase</h2>
       <div class="mapsContainer">
         <div class="map-example">
@@ -81,7 +81,7 @@
         </div>
       </div>  
     </section>
-    <footer>
+    <footer id="ContactMe">
       <p>abwmaps, Copyright &copy; 2022</p>
     </footer>
     <script src="src/app.js"></script>
