added ctpp map to example cards

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
       <h2>Atlas Showcase</h2>
       <div class="mapsContainer">
         <div class="map-example">
-          <img class="project-image" src="" alt="Project Class One"/>
+          <img class="project-image" src="src/img/CTPP.png" alt="Project Class One"/>
           <h3>Web Map (ArcGIS Pro, GEOJSON)</h3>
           <p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi explicabo corrupti voluptas ratione necessitatibus! Aspernatur sapiente non ab adipisci placeat commodi maxime quidem at quibusdam. Maxime adipisci mollitia totam aliquam.</p>
           <hr/>
-          <p class="subtext">View Here</p>
+          <p class="subtext"><a class="example-link" href="https://a-b-w.github.io/central-texas-poverty-patterns.github.io-master/">View Here</a></p>
         </div>
         <div class="map-example">
           <img class="project-image" src="" alt="Project Class Two"/>
