--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="heroText">
           <h1>Alexander B West</h1>
           <p>GIS Analyst</p>  
-          <div class="button"> About me </div>
+          <div class="button"><a class="button" href="#aboutMe">About me</a></div>
         </div>
         <div class="socials">
           <a href="https://www.twitter.com/almochilimo/" class="social">
@@ -42,7 +42,21 @@
     <section class="subSection" id="aboutMe">
       <div class="info">
         <h2>About Me</h2>
-        <p>Hello My Name is Alex West. I am an aspiring GIS developer and Burgening GIS analyst. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic ea quas accusantium explicabo quia praesentium aspernatur! Aut placeat corporis veniam enim facilis nisi porro, quo molestias explicabo. Explicabo, magni minus!  </p>
+        <p>Hello My Name is Alex West. I am an aspiring GIS developer and Burgening GIS analyst. I am also a graduate from Texas State University (B.S. GIS). My personal research interests include remote sensing, cartographic design and applications of GIS. I have a passion for technology and the environment, and I seek intimate knowledge as to how technology and information science can be used to understand and improve the world around us.<br>
+          <br>
+          My core technological skills include:<br>
+          • HTML5<br>
+          • CSS<br> 
+          •JavaScript<br>
+          • python<br> 
+          •SQL<br>
+          I am also adept in the use of these software:<br>
+          •ArcGIS Pro<br>
+          •Erdas Imagine<br>
+          •Microsoft Suits<br>
+          •Adobe Suits<br>
+          •Git<br>
+          •Linnux (debian)  </p>
       </div>
       <div class="mugShotContainer">
         <img class="mugShot" src="src/img/mugshot.jpg" alt="Alex West mugshot"/>
@@ -59,11 +73,11 @@
           <p class="subtext"><a class="example-link" href="https://a-b-w.github.io/central-texas-poverty-patterns.github.io-master/">View Here</a></p>
         </div>
         <div class="map-example">
-          <img class="project-image" src="" alt="Project Class Two"/>
+          <img class="project-image" src="src/img/NeviMap.png" alt="Project Class Two"/>
           <h3>Thematic Map (ArcGIS Pro)</h3>
           <p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, soluta sit! Alias fugiat voluptatem cupiditate quia, modi possimus quaerat optio iusto ipsum. Reiciendis, iure enim? Eum laudantium ratione odit repellendus.</p>
           <hr/>
-          <p class="subtext">View Here</p>
+          <p class="subtext"><a class="example-link" href="https://www.loom.com/share/d4f36b8c8822447482d3b7def8d42da8">View Here</a></p>
         </div>
         <div class="map-example">
           <img class="project-image" src="src/img/ERDAS.png" alt="Project Class Three"/>
@@ -73,17 +87,17 @@
           <p class="subtext"><a class="example-link" href="https://storymaps.arcgis.com/stories/cc8220d1b9ac4018800f720573c43658?play=true&speed=medium">View Here</a></p>
         </div>
         <div class="map-example">
-          <img class="project-image" src="" alt="Project Class Four"/>
+          <img class="project-image" src="src/img/VBumpAustin_Thumb.png" alt="Project Class Four"/>
           <h3>Pictoral Map (ArcGIS Pro)</h3>
           <p class="subtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit distinctio esse maiores illo? Enim saepe earum doloribus inventore quia, quasi ea placeat nulla deleniti officia iusto velit illo, ducimus dolores!</p>
           <hr/>
-          <p class="subtext">View Here</p>
+          <p class="subtext"><a class="example-link" href="https://abwest.maps.arcgis.com/sharing/rest/content/items/3bf83fbf7b384f0885b155f21ff0c9ef/data">View Here</a></p>
         </div>
       </div>  
     </section>
     <footer id="ContactMe">
-      <p>abwmaps, Copyright &copy; 2022</p>
+      <h2>alexanderblakewest@gmail.com</h2>
+      <p>abwmaps, Copyright 2022</p>
     </footer>
-    <script src="src/app.js"></script>
   </body>
 </html>
