added burger button more styling

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>A. West | Portfolio & Atlas Showcase</title>
     <link rel="stylesheet" href="src/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,300;0,600;0,700;0,800;1,400&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/ced6a5ca41.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <section class="hero">
@@ -19,6 +20,9 @@
           <li><a href="#Projects">Projects</a></li>
           <li><a href="#ContactMe">Contact</a></li>
         </ul>
+        <button class="hamburger" id="hamburger">
+          <i class="fas fa-bars"></i>
+        </button>
       </nav>
       <div class="heroArea">
         <div class="heroText">
