playing with responsivness resized mugshot

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <section class="hero">
       <nav>
         <img class="logo" src="src/img/abwmapsLogo.png" alt="abwmaps logo"/>
-        <ul>
-          <li><a href="">Downloads</a></li>
+        <ul id="nav-list">
+          <li><a href="#downloads">Downloads</a></li>
           <li><a href="#Projects">Projects</a></li>
           <li><a href="#ContactMe">Contact</a></li>
         </ul>
@@ -65,7 +65,7 @@
       <div class="mugShotContainer">
         <img class="mugShot" src="src/img/mugshot.jpg" alt="Alex West mugshot"/>
       </div>
-    </section>
+    </section>              
     <section class="subSectionAlt" id="Projects">
       <h2>Atlas Showcase</h2>
       <div class="mapsContainer">
