more styles and response tries

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
     </section>
     <section class="subSection" id="aboutMe">
-      <div class="info">
+      <div>
         <h2>About Me</h2>
         <p>Hello My Name is Alex West. I am an aspiring GIS developer and Burgening GIS analyst. I am also a graduate from Texas State University (B.S. GIS). My personal research interests include remote sensing, cartographic design and applications of GIS. I have a passion for technology and the environment, and I seek intimate knowledge as to how technology and information science can be used to understand and improve the world around us.<br>
           <br>
@@ -60,7 +60,8 @@
           •Microsoft Suits<br>
           •Adobe Suits<br>
           •Git<br>
-          •Linnux (debian)  </p>
+          •	Github	 <br>
+          •Linnux (debian)</p>
       </div>
       <div class="mugShotContainer">
         <img class="mugShot" src="src/img/mugshot.jpg" alt="Alex West mugshot"/>
@@ -100,7 +101,7 @@
       </div>  
     </section>
     <footer id="ContactMe">
-      <h2>alexanderblakewest@gmail.com</h2>
+      <h1 class="footH">alexanderblakewest@gmail.com</h1>
       <p>abwmaps, Copyright 2022</p>
     </footer>
   </body>
