--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <nav>
         <img class="logo" src="src/img/abwmapsLogo.png" alt="abwmaps logo"/>
         <ul id="nav-list">
-          <li><a href="#downloads">Downloads</a></li>
+          <li><a href="src/img/Alexander_West_Resume.docx" download>Download Resume</a></li>
           <li><a href="#Projects">Projects</a></li>
           <li><a href="#ContactMe">Contact</a></li>
         </ul>
@@ -31,13 +31,13 @@
           <div class="button"><a class="button" href="#aboutMe">About me</a></div>
         </div>
         <div class="socials">
-          <a href="https://www.twitter.com/almochilimo/" class="social">
+          <a target="_blank" href="https://www.twitter.com/almochilimo/" class="social">
             <svg xmlns="http://www.w3.org/2000/svg" Fill="#ffffff" width="50" height="50" viewBox="0 0 24 24"><path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"/></svg>
           </a>
-          <a href="https://www.linkedin.com/in/alexbwest/" class="social">
+          <a target="_blank" href="https://www.linkedin.com/in/alexbwest/" class="social">
             <svg xmlns="http://www.w3.org/2000/svg" Fill="#ffffff" width="50" height="50" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
           </a>
-          <a href="https://github.com/a-b-w" class="social">
+          <a target="_blank" href="https://github.com/a-b-w" class="social">
             <svg xmlns="http://www.w3.org/2000/svg" Fill="#ffffff" width="50" height="50" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
           </a>
         </div>
@@ -73,30 +73,31 @@
         <div class="map-example">
           <img class="project-image" src="src/img/CTPP.png" alt="Project Class One"/>
           <h3>Web Map (ArcGIS Pro, GEOJSON)</h3>
-          <p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi explicabo corrupti voluptas ratione necessitatibus! Aspernatur sapiente non ab adipisci placeat commodi maxime quidem at quibusdam. Maxime adipisci mollitia totam aliquam.</p>
+          <p class="subtext">Central Texas Poverty Patterns is an interarctive webmap showcasing my webmapping and version control skillset. The Layers for this map where produced by cana Texas in collaboration with Carlos Soto. I was chosen to be the lead developer on the webmap which was a great introduction and learning experience.</p>
           <hr/>
-          <p class="subtext"><a class="example-link" href="https://a-b-w.github.io/central-texas-poverty-patterns.github.io-master/">View Here</a></p>
+          <p class="subtextLink"><a class="example-link" target="_blank" href="https://a-b-w.github.io/central-texas-poverty-patterns.github.io-master/">View Here</a></p>
         </div>
         <div class="map-example">
           <img class="project-image" src="src/img/NeviMap.png" alt="Project Class Two"/>
           <h3>Thematic Map (ArcGIS Pro)</h3>
-          <p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, soluta sit! Alias fugiat voluptatem cupiditate quia, modi possimus quaerat optio iusto ipsum. Reiciendis, iure enim? Eum laudantium ratione odit repellendus.</p>
+          <p class="subtext">This is a small video tutorial showcasing a project I developed for Trillium Energy. In the video I run a python script I wrote to automate a geoprocessing workflow for the project. I also explain the basic layout and usage of ArcGIS Pro.
+          </p>
           <hr/>
-          <p class="subtext"><a class="example-link" href="https://www.loom.com/share/d4f36b8c8822447482d3b7def8d42da8">View Here</a></p>
+          <p class="subtextLink"><a class="example-link" target="_blank" href="https://www.loom.com/share/d4f36b8c8822447482d3b7def8d42da8">View Here</a></p>
         </div>
         <div class="map-example">
           <img class="project-image" src="src/img/ERDAS.png" alt="Project Class Three"/>
           <h3>Landuse Landcover Change Map (ERDAS Imagine)</h3>
-          <p class="subtext">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error soluta nesciunt, aspernatur sit nostrum accusamus enim ut eligendi? Architecto, illo animi. Maiores quos facilis hic assumenda commodi ea optio dolores!</p>
+          <p class="subtext">This story map was the magnum opus of my remote sensing course corriculum at Texas State University. The thematic maps where produced using a multi-date composite image principle component analysis. The results showed highlighted areas of siginficant urban build up, and the classification produced a modestly accurate land cover change summary statistics output.</p>
           <hr/>
-          <p class="subtext"><a class="example-link" href="https://storymaps.arcgis.com/stories/cc8220d1b9ac4018800f720573c43658?play=true&speed=medium">View Here</a></p>
+          <p class="subtextLink"><a class="example-link" target="_blank" href="https://storymaps.arcgis.com/stories/cc8220d1b9ac4018800f720573c43658?play=true&speed=medium">View Here</a></p>
         </div>
         <div class="map-example">
           <img class="project-image" src="src/img/VBumpAustin_Thumb.png" alt="Project Class Four"/>
           <h3>Pictoral Map (ArcGIS Pro)</h3>
-          <p class="subtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit distinctio esse maiores illo? Enim saepe earum doloribus inventore quia, quasi ea placeat nulla deleniti officia iusto velit illo, ducimus dolores!</p>
+          <p class="subtext">This is just a fun bumpafied map I produced for my atlas. It is a vintage topoquad of the Austin east quadrangle georefrenced and digitally enhanced using 3d analysis tools. This map definitly shows the prowess of ArcGIS Pro when it comes to cartographic design.</p>
           <hr/>
-          <p class="subtext"><a class="example-link" href="https://abwest.maps.arcgis.com/sharing/rest/content/items/3bf83fbf7b384f0885b155f21ff0c9ef/data">View Here</a></p>
+          <p class="subtextLink"><a class="example-link" target="_blank" href="https://abwest.maps.arcgis.com/sharing/rest/content/items/3bf83fbf7b384f0885b155f21ff0c9ef/data">View Here</a></p>
         </div>
       </div>  
     </section>
@@ -104,5 +105,6 @@
       <h1 class="footH">alexanderblakewest@gmail.com</h1>
       <p>abwmaps, Copyright 2022</p>
     </footer>
+    <script src="src/app.js"></script>
   </body>
 </html>
