--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <nav>
         <img class="logo" src="src/img/abwmapsLogo.png" alt="abwmaps logo"/>
         <ul id="nav-list">
-          <li><a href="src/img/Alexander_West_Resume.docx" download>Download Resume</a></li>
+          <li><a href="src/img/Alexander_West_Resume.docx" download>Download<br>Resume</a></li>
           <li><a href="#Projects">Projects</a></li>
           <li><a href="#ContactMe">Contact</a></li>
         </ul>
