linked website to resume.

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="map-example">
           <img class="project-image" src="src/img/VBumpAustin_Thumb.png" alt="Project Class Four"/>
           <h3>Pictoral Map (ArcGIS Pro)</h3>
-          <p class="subtext">This is just a fun bumpafied map I produced for my atlas. It is a vintage topoquad of the Austin east quadrangle georefrenced and digitally enhanced using 3d analysis tools. This map definitly shows the prowess of ArcGIS Pro when it comes to cartographic design.</p>
+          <p class="subtext">This is just a fun bumpafied map I produced for my atlas. It is a vintage topoquad of the Austin east quadrangle georefrenced and digitally enhanced using 3d analysis tools. This map definitly shows the prowess of ArcGIS Pro when it comes to cartographic design. Big shout out to Cartographer and Youtuber John Nelson for help in creating this map. You really cannot go wrong with any one of his tutorials if your looking to learn some fun things. </p>
           <hr/>
           <p class="subtextLink"><a class="example-link" target="_blank" href="https://abwest.maps.arcgis.com/sharing/rest/content/items/3bf83fbf7b384f0885b155f21ff0c9ef/data">View Here</a></p>
         </div>
